--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+env:
+  global:
+    SLIRP_PORTS="6379"
+
 install:
   - source bootstrap.sh
 
@@ -6,7 +10,7 @@ before_script:
   - docker pull redis:latest
 
 script:
-  - docker run -d -p 6379:6379 redis:lastest
+  - docker run -d -p 6379:6379 redis:latest
   - redis-cli info
 
 notifications:
